[gd_scene load_steps=3 format=2]

[ext_resource path="res://RaptorRender/GUI/SortableTable/specific_sortable_table_cell_elements/JobProgressBar/JobProgressBar.gd" type="Script" id=1]
[ext_resource path="res://RaptorRender/GUI/SortableTable/specific_sortable_table_cell_elements/JobProgressBar/ColorRect_finished.gd" type="Script" id=2]

[node name="JobProgressBar" type="MarginContainer"]
margin_right = 153.0
margin_bottom = 23.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 4
custom_constants/margin_left = 2
custom_constants/margin_bottom = 4
script = ExtResource( 1 )

[node name="ColorRect_bg" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 4.0
margin_right = 151.0
margin_bottom = 19.0
mouse_filter = 2
color = Color( 0.175781, 0.175781, 0.175781, 1 )

[node name="ColorRect_active" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 4.0
margin_right = 62.0
margin_bottom = 19.0
rect_min_size = Vector2( 60, 0 )
mouse_filter = 2
size_flags_horizontal = 0
color = Color( 0.110596, 0.47752, 0.589844, 1 )

[node name="ColorRect_finished" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 4.0
margin_right = 22.0
margin_bottom = 19.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 2
size_flags_horizontal = 0
color = Color( 0.454324, 0.683594, 0.264359, 1 )
script = ExtResource( 2 )

[node name="ProgressLabel" type="Label" parent="."]
margin_left = 2.0
margin_top = 4.0
margin_right = 151.0
margin_bottom = 18.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "95 %"
align = 1
